# ableton-gestures

./: README.md  action_gestures.py  pyproject.toml
ableton/gestureProject 1  Project/: gestureProject 1 .als
ableton/gestureProject 1  Project/Backup/: gestureProject 1  [2024-11-23 131930].als  gestureProject 1  [2024-11-24 160758].als  gestureProject 1  [2024-11-24 191711].als  gestureProject 1  [2024-11-25 160013].als  gestureProject 1  [2024-11-25 184124].als  gestureProject 1  [2024-11-29 130358].als
